[Learning] הוספת כפתור הדפסה לדף הנוכחי והסרת כפתורי הדפסה מיותרים מדפי פרומפטים

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <span class="icon">🔗</span>
                     <span class="text">העתק</span>
                 </button>
+                <button class="btn btn-print" id="printPageBtn" title="הדפס דף">
+                    <span class="icon">🖨️</span>
+                    <span class="text">הדפסה</span>
+                </button>
             </div>
         </div>
 
